added some javascript

--- a/styles/style.css
+++ b/styles/style.css
@@ -26,7 +26,11 @@ p, li {
 img {
     display: block;
     margin: 0 auto;
-    width: 400px;
+    width: 600px;
+}
+button {
+    width: 100px;
+    height: 50px;
 }
 #UnderText {
     text-align: center;
